--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 
 body{
     position: relative;
-    padding-bottom: 19em;
+    padding-bottom: 12em;
     min-height: 100vh;
     background-color: #E3DAB8;
+}
+
+
+.encabezado{
+    display: flex;
+    justify-content: flex-start;
+    /* flex-wrap: wrap; */
+    align-items: center;
+}
+
+.banner{
+    display: flex;
+    justify-content: flex-start;
+    /* flex-wrap: wrap; */
+    align-items: center;
+}
+
+#logo_blanco{
+    width: 100px;
+    margin-left: 23;
+}
+
+#instagram{
+    width: 50px;
+    margin-left: 1150;
 }
 
 header{
@@ -17,8 +42,9 @@ header{
 }
 
 .titulo{
-    font-size: 32;
-    margin-left: 100;
+    font-size: 40;
+    margin-left: 20;
+    color: white;
 }
 
 nav{
