--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@ body{
 
 
 .encabezado{
-    display: flex;
+    display: inline-flex;
     justify-content: flex-start;
-    /* flex-wrap: wrap; */
+    /* flex-wrap: wrap;  */
     align-items: center;
 }
 
 .banner{
     display: flex;
     justify-content: flex-start;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap; 
     align-items: center;
 }
 
@@ -33,7 +33,7 @@ body{
 
 header{
     padding:10px;
-    width: 200vh;
+    width: 184vh;
     top:0px;
     left:0px;
     position:fixed;
@@ -60,7 +60,7 @@ nav{
     flex-direction: row;
     justify-content: space-around;
     padding:10px;
-    width: 200vh;
+    width: 180vh;
 }
 
 
@@ -107,14 +107,14 @@ main{
 .container_libros_vendidos{
     display:grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     border:2px solid;
     height: 530px;
     border-color: #41B3F8;
     grid-template-areas:
     'item2 item2 item 2'
     ;
-    background-color: #41B3F8;
+    /* background-color: #41B3F8; */
     
 }
 
@@ -143,15 +143,6 @@ main{
     ;
     background-color: #4FE5A8;
 }
-
-
-
-
-
-
-
-
-
 
 .row{
     background-color: #416DF8;
