--- a/style.css
+++ b/style.css
@@ -159,10 +159,10 @@ main{
     position: absolute;
     width: 100%;
     bottom: 0;
+    
 }
 
 footer{
-    
     color: #000000;
     font-size: 14px;
     display: flex;
@@ -173,6 +173,8 @@ footer{
 
 .texto_pie{
     color: white;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 ::-webkit-scrollbar {display: none;}
