--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
 .encabezado{
     display: inline-flex;
     justify-content: flex-start;
-    /* flex-wrap: wrap;  */
     align-items: center;
 }
 
@@ -47,7 +46,7 @@ header{
     position: relative;
     font-size: 40;
     top: 30;
-    margin-left: 40;
+    left: 40;
     color: white;
 }
 
