--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ nav{
 main{
     position:relative;
     margin-top: 180px;
+    margin-top: 200px;
     display: grid;
     grid-template-rows:1fr 1fr 1fr;
     grid-template-columns: 1fr;
