--- a/style_fq.css
+++ b/style_fq.css
@@ -9,7 +9,6 @@ body{
 .encabezado{
     display: inline-flex;
     justify-content: flex-start;
-    /* flex-wrap: wrap;  */
     align-items: center;
 }
 
@@ -27,7 +26,8 @@ body{
 
 #instagram{
     width: 50px;
-    margin-left: 1150;
+    margin-left: 950;
+    
 }
 
 header{
@@ -42,10 +42,13 @@ header{
 }
 
 .titulo{
+    position: relative;
     font-size: 40;
-    margin-left: 20;
+    top: 30;
+    left: 40;
     color: white;
 }
+
 nav{
     
     background-color: #416DF8;
