--- a/style_fq.css
+++ b/style_fq.css
@@ -153,7 +153,7 @@ main{
     margin-bottom: 1vh;
 }
 
-.seguridad, .devoluciones, .envios{
+.seguridad, .devoluciones, .envios, .formulario_contacto{
     margin-top: 0vh;
     margin-left: 2vh;
 }
@@ -184,7 +184,53 @@ th{
 }
 
 
+.campo_formulario{
+    width: 80%; /* Ancho del fieldset */
+    max-width: 600px; /* Ancho máximo del fieldset */
+    padding: 20px; /* Espacio interno (padding) */
+    /*margin: 0 auto;  Centrar el fieldset */
+    border: 2px solid #000; /* Borde del fieldset */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-color: #416DF8;
+}
+
+.linea {
+    display: block;
+    margin-bottom: 20px; /* Ajusta el valor según sea necesario */
+}
+
+.choice{
+    display: block;
+    margin-bottom: 10px; 
+}
 
 
+.casilla{
+    background-color: #FFF5CF;
+    border-width: 2;
+}
 
+footer{
+   
+    color: #000000;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    box-shadow: 0px -2px 5px #b1b0b0;
+}
 
+.texto_pie{
+    color: white;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.row{
+    background-color: #416DF8;
+    position: relative;
+    width: 100%;
+    top: 20px;
+    
+}
