--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
     position: relative;
     background-color: #E3DAB8;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -29,6 +30,9 @@ body{
     
 }
 
+
+
+
 header{
     padding:10px;
     width: 100%;
@@ -37,7 +41,6 @@ header{
     position:fixed;
     z-index: 50;
     background-color: #416DF8;
-    
 }
 
 .titulo{
@@ -64,6 +67,10 @@ nav{
 .menu{
     color: #fff;
     text-decoration: none;
+}
+
+.active{
+    color: #81BD84;
 }
 
 main{
