--- a/style_catalago.css
+++ b/style_catalago.css
@@ -1,6 +1,7 @@
 body{
     position: relative;
     background-color: #E3DAB8;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -69,6 +70,10 @@ nav{
 .menu{
     color: #fff;
     text-decoration: none;
+}
+
+.active{
+    color: #81BD84;
 }
 
 main{
