--- a/style_fq.css
+++ b/style_fq.css
@@ -3,6 +3,7 @@ body{
     padding-bottom: 12em;
     min-height: 100vh;
     background-color: #E3DAB8;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -63,6 +64,10 @@ nav{
 .menu{
     color: #fff;
     text-decoration: none;
+}
+
+.active{
+    color: #81BD84;
 }
 
 main{
