--- a/style_nosotros.css
+++ b/style_nosotros.css
@@ -5,61 +5,55 @@ body{
 }
 
 
-.encabezado{
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.banner{
+.banner {
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap; 
     align-items: center;
 }
 
-#logo_blanco{
+#logo_blanco {
     width: 100px;
-    margin-left: 23;
+    margin-left: 20px;
+    margin-right: 10px;
 }
 
+.titulo {
+    margin: 0;
+    font-size: 40px; /* Especifica la unidad */
+    color: white;
+}
 
-
-
-
-
-header{
-    padding:10px;
+header {
     width: 100%;
-    top:0px;
-    left:0px;
-    position:fixed;
+    top: 0px;
+    left: 0px;
+    position: fixed;
     z-index: 50;
     background-color: #416DF8;
 }
 
-.titulo{
-    position: relative;
-    font-size: 40;
-    top: 30;
-    left: 40;
-    color: white;
-}
-
-
-
-nav{
+.header-container {
+    display: flex;
     
-    background-color: #416DF8;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding:10px;
-    width: 180vh;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #416DF8;
+    width: 150vh;
+    margin-right: 100px;
+}
 
-.menu{
+.item {
+    margin-left: 20px;
+}
+
+.menu {
     color: #fff;
     text-decoration: none;
 }
@@ -69,7 +63,7 @@ nav{
 }
 
 .información_nosotros{
-    margin-top: 250px;
+    margin-top: 150px;
     margin-left: 2vh;
 }
 
@@ -135,4 +129,26 @@ nav{
 
 .talleres, .social{
     margin-left: 2vh;
+}
+
+footer{
+   
+    color: #000000;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    box-shadow: 0px -2px 5px #b1b0b0;
+}
+
+.texto_pie{
+    color: white;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.row{
+    background-color: #416DF8;
+    position: relative;
+    width: 100%;
 }
