--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
         position: relative;
         background-color: #E3DAB8;
         font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
     }
-    .encabezado{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+    
     
     .banner{
         display: flex;
@@ -40,7 +38,7 @@
         display:flex;
         align-items: center;
         flex-direction: column;
-        padding:10px;
+        
         width: 100%;
     }
     .menu{
@@ -60,22 +58,11 @@
         width: 100%;
     }
     
-    .mas_vendidos{
-        margin:10px;
-        padding:10px;
+    h3{
+        text-align: center;
     }
-    
-    .atemporales{
-        
-        margin:10px;
-        padding:10px;
-    }
-    
-    .recomendados{
-        
-        margin:10px;
-        padding:10px;
-    }
+
+   
     
     .item2{
         margin:30px;
@@ -100,10 +87,10 @@
         border:2px solid;
         border-color:#4FE5A8 ;
     }
-    img{
+    .libro{
         position: relative;
         top:30px;
-        left:30px;
+        left:22.5px;
         width:80%;
         height: 80%;
     }
@@ -117,23 +104,24 @@
     
     
     .row{
+        margin-top: 20px;
         background-color: #416DF8;
         position: relative;
         width: 100%;
-        top:150px;
+        
         
     }
-    
+
     footer{
-       
+    
         color: #000000;
         font-size: 14px;
         display: flex;
         flex-direction: column;
         text-align: center;
-        box-shadow: 0px -2px 5px #b1b0b0;
+        
     }
-    
+
     .texto_pie{
         color: white;
         margin-bottom: 0;
@@ -149,6 +137,8 @@
         position: relative;
         background-color: #E3DAB8;
         font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
     }
     
     
@@ -290,7 +280,7 @@ main{
     'item2 item2';
     /* background-color: #4FE5A8; */
 }
-img{
+.libro{
     position: relative;
     top:30px;
     left:30px;
@@ -336,188 +326,189 @@ footer{
 
 
 @media (min-width:1200px){
-    body{
+    body {
         position: relative;
         background-color: #E3DAB8;
         font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
     }
-    
-    
-    .encabezado{
-        display: inline-flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    
-    .banner{
+
+    .banner {
         display: flex;
-        justify-content: flex-start;
-        flex-wrap: wrap; 
         align-items: center;
     }
-    
-    #logo_blanco{
+
+    #logo_blanco {
         width: 100px;
-        margin-left: 23;
+        margin-left: 20px;
+        margin-right: 10px;
     }
+
+    .titulo {
+        margin: 0;
+        font-size: 40px;
+        color: white;
+    }
+
+    header {
+        width: 100%;
+        top: 0px;
+        left: 0px;
+        position: fixed;
+        z-index: 50;
+        background-color: #416DF8;
+    }
+
+    .header-container {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #416DF8;
+        width: 150vh;
+        margin-right: 100px;
+    }
+
+    .item {
+        margin-left: 20px;
+    }
+
+    .menu {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .active {
+        color: #00DC14;
+    }
+
+
+
+    main{
+        position:relative;
+        margin-top: 150px;
+        display: grid;
+        grid-template-rows:1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        height:250vh;
+        grid-template-areas:
+        'mas_vendidos'
+        'atemporales'
+        'recomendados';
+    }
+
+    .mas_vendidos{
+        
+        grid-area:mas_vendidos;
+        margin:10px;
+        padding:10px;
+    }
+
+    .atemporales{
+        grid-area:atemporales;
+        margin:10px;
+        padding:10px;
+    }
+
+    .recomendados{
+        grid-area:recomendados;
+        margin:10px;
+        padding:10px;
+    }
+
+    .item2{
+        margin:30px;
+        background-color: #DC9D9B;
+    }
+    .container_libros_vendidos{
+        display:grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        border:2px solid;
+        height: 550px;
+        border-color: #41B3F8;
+        grid-template-areas:
+        'item2 item2 item 2 item 2'
+        ;
     
-    header{
-    padding:10px;
-    width: 100%;
-    top:0px;
-    left:0px;
-    position:fixed;
-    z-index: 50;
-    background-color: #416DF8;
-}
+        
+    }
 
-.titulo{
-    position: relative;
-    font-size: 40;
-    top: 30;
-    left: 40;
-    color: white;
-}
+    .container_libros_atemporales{
+        display:grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        border:2px solid;
+        height: 550px;
+        border-color: #59DED8;
+        grid-template-areas:
+        'item2 item2 item 2 item 2'
+        ;
+        /* background-color: #59DED8; */
+    }
 
-
-
-nav{
+    .container_libros_recomendados{
+        display:grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        height: 550px;
+        border:2px solid;
+        border-color:#4FE5A8;
+        grid-template-areas:
+        'item2 item2 item 2 item 2'
     
-    background-color: #416DF8;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding:10px;
-    width: 180vh;
-}
+        ;
+        /* background-color: #4FE5A8; */
+    }
+    .libro{
+        position: relative;
+        top:30px;
+        left:30px;
+        width:80%;
+        height: 80%;
+    }
+
+    .epigrafe{
+        position: relative;
+        top: 20px;
+        text-align: center;
+    }
 
 
-.menu{
-    color: #fff;
-    text-decoration: none;
-}
 
-.active{
-    color: #00DC14;
-}
+    .row{
+        background-color: #416DF8;
+        position: relative;
+        width: 100%;
+        
+        
+    }
 
-main{
-    position:relative;
-    margin-top: 200px;
-    display: grid;
-    grid-template-rows:1fr 1fr 1fr;
-    grid-template-columns: 1fr;
-    height:250vh;
-    grid-template-areas:
-    'mas_vendidos'
-    'atemporales'
-    'recomendados';
-}
-
-.mas_vendidos{
+    footer{
     
-    grid-area:mas_vendidos;
-    margin:10px;
-    padding:10px;
-}
+        color: #000000;
+        font-size: 14px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        box-shadow: 0px -2px 5px #b1b0b0;
+    }
 
-.atemporales{
-    grid-area:atemporales;
-    margin:10px;
-    padding:10px;
-}
+    .texto_pie{
+        color: white;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
 
-.recomendados{
-    grid-area:recomendados;
-    margin:10px;
-    padding:10px;
-}
-
-.item2{
-    margin:30px;
-    background-color: #DC9D9B;
-}
-.container_libros_vendidos{
-    display:grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    border:2px solid;
-    height: 550px;
-    border-color: #41B3F8;
-    grid-template-areas:
-    'item2 item2 item 2 item 2'
-    ;
-   
-    
-}
-
-.container_libros_atemporales{
-    display:grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    border:2px solid;
-    height: 550px;
-    border-color: #59DED8;
-    grid-template-areas:
-    'item2 item2 item 2 item 2'
-    ;
-    /* background-color: #59DED8; */
-}
-
-.container_libros_recomendados{
-    display:grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    height: 550px;
-    border:2px solid;
-    border-color:#4FE5A8;
-    grid-template-areas:
-    'item2 item2 item 2 item 2'
-  
-    ;
-    /* background-color: #4FE5A8; */
-}
-img{
-    position: relative;
-    top:30px;
-    left:30px;
-    width:80%;
-    height: 80%;
-}
-
-.epigrafe{
-    position: relative;
-    top: 20px;
-    text-align: center;
-}
-
-
-
-.row{
-    background-color: #416DF8;
-    position: relative;
-    width: 100%;
-    
-    
-}
-
-footer{
-   
-    color: #000000;
-    font-size: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    box-shadow: 0px -2px 5px #b1b0b0;
-}
-
-.texto_pie{
-    color: white;
-    margin-bottom: 0;
-    margin-top: 0;
-}
-
-::-webkit-scrollbar {display: none;}
-    
-}
+    ::-webkit-scrollbar {display: none;}
+        
+    }
 
