--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+@import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css");
 
 @media (max-width: 599px){
     body{
@@ -337,6 +338,7 @@ footer{
     .banner {
         display: flex;
         align-items: center;
+        animation: rubberBand 2s 1;
     }
 
     #logo_blanco {
@@ -349,6 +351,7 @@ footer{
         margin: 0;
         font-size: 40px;
         color: white;
+        
     }
 
     header {
