formateo de proyecto

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Gata y la Luna</title>
     <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
         <div class="header-container" >
 
             <div class="banner">
-            <img src="Imagenes/logo_blanco.png" id="logo_blanco" alt="logo">   
+            <img src="../static/images/logo_blanco.png" id="logo_blanco" alt="logo">   
                 <h1 class="titulo">La gata y la Luna</h1>
             </div> 
         
