Correcion rutas FQ

--- a/templates/FQ.html
+++ b/templates/FQ.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centro de ayuda- La Gata y la Luna</title>
-    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
-    <link rel="stylesheet" href="style_fq.css">
+    <link rel="icon" type="image/x-icon" href="static\images\logo_oficial.png">
+    <link rel="stylesheet" href="static\css\style_fq.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
         <div class="header-container">
 
             <div class="banner">
-                <img src="Imagenes/logo_blanco.png" id="logo_blanco" alt="logo"> 
+                <img src="static\images\logo_blanco.png" id="logo_blanco" alt="logo"> 
                 <h1 class="titulo">La gata y la Luna</h1>
             </div> 
         
@@ -35,13 +35,13 @@
         <section class="centro">
             <p class="centro_ayuda">Centro de ayuda </p>
             <div class="container_centro_ayuda">
-                <div class="item_consulta"><img src="Imagenes/camion.png" alt="Camion de Envios" class="imagen_consulta">
+                <div class="item_consulta"><img src="static\images\camion.png" alt="Camion de Envios" class="imagen_consulta">
                     <p class="info">Para compras iguales o superiores a AR $20000, <strong> no se cobran gastos de envío (solo en la Argentina) </strong>. Enviamos tu compra por Correo Argentino, Urbano o Andreani para envíos nacionales y por DHL para compras internacionales.</p>
                 </div>
-                <div class="item_consulta"><img src="Imagenes/local.png" alt="Signo Google Maps" class="local">
+                <div class="item_consulta"><img src="static\images\local.png" alt="Signo Google Maps" class="local">
                     <p class="info"> Si estás en la Ciudad de Buenos Aires, te esperamos en nuestro local de <strong> lunes a viernes de 10:30 a 13:30  y de 16:00 a 20:00 </strong> y los <strong>sabados de 10:30 </strong> (hora argentina, -0300 UTC) </p>
                 </div>
-                <div class="item_consulta"><img src="Imagenes/contacto.png" alt="Crepusculo" class="imagen_consulta">
+                <div class="item_consulta"><img src="static\images\contacto.png" alt="Crepusculo" class="imagen_consulta">
                     <p class="info">Para consultas por compras en proceso o sobre cómo comprar, contactanos al <strong> (54) 011 4703-4855 </strong> durante el horario de atencion (indicando tu numero de compra)</p>
             
                 </div>
