Correcion rutas nosotros

--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - La Gata y la Luna</title>
-    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
-    <link rel="stylesheet" href="style_nosotros.css">
+    <link rel="icon" type="image/x-icon" href="static\images\logo_oficial.png">
+    <link rel="stylesheet" href="static\css\style_nosotros.css">
     
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="header-container">
 
             <div class="banner">
-                <img src="Imagenes/logo_blanco.png" id="logo_blanco" alt="logo"> 
+                <img src="static\images\logo_blanco.png" id="logo_blanco" alt="logo"> 
                 <h1 class="titulo">La gata y la Luna</h1>
             </div> 
         
@@ -55,27 +55,27 @@
                 Talleres y Eventos
             </p>
             <div class="imagenes">
-                <img class="fig" src="Imagenes/taller1.jpg" alt="taller1">
-                <img class="fig" src="Imagenes/taller2.jpg" alt="taller2"> 
-                <img class="fig" src="Imagenes/taller3.jpg" alt="taller3">
-                <img class="fig" src="Imagenes/taller4.jpg" alt="taller4">
+                <img class="fig" src="static\images\taller1.jpg" alt="taller1">
+                <img class="fig" src="static\images\taller2.jpg" alt="taller2"> 
+                <img class="fig" src="static\images\taller3.jpg" alt="taller3">
+                <img class="fig" src="static\images\taller4.jpg" alt="taller4">
             </div>
         </section>
 
         <section class="social">
             <p class="pregunta">Redes Sociales</p>
             <div class="red1">
-                <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"><img src="Imagenes/instagram-logo.png" id="instagram" alt="instagram"></a>
+                <a href="https://www.instagram.com/lagataylaluna?igsh=bTdjOW1lcG14ODVr"><img src="static\images\instagram-logo.png" id="instagram" alt="instagram"></a>
                 <p class="nombre_red">@lagataylaluna</p>
             </div>
 
             <div class="red2">
-                <a href="https://www.facebook.com/lagataylaluna"><img src="Imagenes/facebook-logo.png" id="facebook" alt="Facebook"></a>
+                <a href="https://www.facebook.com/lagataylaluna"><img src="static\images\facebook-logo.png" id="facebook" alt="Facebook"></a>
                 <p class="nombre_red">La gata y la luna </p>
             </div>
 
             <div class="red3">
-                <a href="mailto:lagataylalunalibros@gmail.com?subject=Consulta%20sobre%20productos&body=Hola,%20quisiera%20más%20información%20sobre%20sus%20productos."><img src="Imagenes/mail.png" id="mail" alt="mail"></a>
+                <a href="mailto:lagataylalunalibros@gmail.com?subject=Consulta%20sobre%20productos&body=Hola,%20quisiera%20más%20información%20sobre%20sus%20productos."><img src="static\images\mail.png" id="mail" alt="mail"></a>
                 <p class="nombre_red">lagataylalunalibros@gmail.com </p>
             </div>
 
