seguimos con fromato

--- a/templates/Catalogo.html
+++ b/templates/Catalogo.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Imagenes/logo_oficial.png">
-    <link rel="stylesheet" href="style_catalago.css">
+    <link rel="icon" type="image/x-icon" href="../static/Imagenes/logo_oficial.png">
+    <link rel="stylesheet" href="../static/css/style_catalago.css">
     <title>Catalogo - La Gata y La Luna</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="header-container">
 
             <div class="banner">
-                <img src="Imagenes/logo_blanco.png" id="logo_blanco" alt="logo"> 
+                <img src="../static/images/logo_blanco.png" id="logo_blanco" alt="logo"> 
                 <h1 class="titulo">La gata y la Luna</h1>
             </div> 
         
@@ -34,7 +34,7 @@
         <h1>Catalogo</h1>
         
         <section>
-                <img src="Imagenes/libro1.jpg" alt="La asistenta">
+                <img src="../static/images/libro1.jpg" alt="La asistenta">
                 <div class="seccion">
                     
                     <h2>La Asistenta</h2>
@@ -57,7 +57,7 @@
 
         </section>
         <section id="Universo_Wigetta">
-            <img src="Imagenes/wigetta.jpg" alt="Universo Wigetta en el Infierno">
+            <img src="../static/images/wigetta.jpg" alt="Universo Wigetta en el Infierno">
             <div class="seccion"> 
                 <h2>Universo Wigetta en el Infierno</h2>
                 <p >Título Original: Universo Wigetta en el Infierno</p>
@@ -75,7 +75,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
+            <img src="../static/images/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
             <div class="seccion"> 
                 <h2>La canción de Aquiles</h2>
                 <p >Título Original: The Song of Achilles</p>
@@ -96,7 +96,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/Sigman.jpg" alt="Artificial">
+            <img src="../static/images/Sigman.jpg" alt="Artificial">
             <div class="seccion"> 
                 <h2>Artificial</h2>
                 <p >Título Original: Artificial</p>
@@ -117,7 +117,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/Principito.jpg" alt="El principito">
+            <img src="../static/images/Principito.jpg" alt="El principito">
             <div class="seccion"> 
             <h2>El Principito</h2>
                 <p >Título Original: Le Petit Prince</p>
@@ -140,7 +140,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/RomeoYJulieta.jpg" alt="Romeo y Julieta">
+            <img src="../static/images/RomeoYJulieta.jpg" alt="Romeo y Julieta">
             <div class="seccion"> 
                 <h2>Romeo y Julieta</h2>
                 <p >Título Original:Romeo and Juliet</p>
@@ -165,7 +165,7 @@
         </section>
 
         <section>
-            <img src="Imagenes/crepusculo.webp" alt="Crepusculo">
+            <img src="../static/images/crepusculo.webp" alt="Crepusculo">
             <div class="seccion"> 
                 <h2>Crepusculo</h2>
                 <p >Título Original: Twilight</p>
@@ -187,7 +187,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/martin_fierro.webp" alt="Martin Fierro">
+            <img src="../static/images/martin_fierro.webp" alt="Martin Fierro">
             <div class="seccion"> 
                 <h2>Martin Fierro</h2>
                 <p >Título Original: Martin Fierro</p>
@@ -210,7 +210,7 @@
         </section>
 
         <section>
-            <img src="Imagenes/la_chica_del_tren.webp" alt="La Chica del Tren">
+            <img src="../static/images/la_chica_del_tren.webp" alt="La Chica del Tren">
             <div class="seccion"> 
                 <h2> La Chica del Tren</h2>
                 <p >Título Original: The Girl on the Train</p>
@@ -232,7 +232,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/la_tempestad.webp" alt="La Tempestad">
+            <img src="../static/images/la_tempestad.webp" alt="La Tempestad">
             <div class="seccion"> 
                 <h2> La tempestad</h2>
                 <p >Título Original:The tempest</p>
@@ -254,7 +254,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/bozondehiggs.jpg" alt="El Bozon de Higgs No te va a Hacer la Cama">
+            <img src="../static/images/bozondehiggs.jpg" alt="El Bozon de Higgs No te va a Hacer la Cama">
             <div class="seccion"> 
                 <h2> El Bozon de Higgs No te va a Hacer la Cama</h2>
                 <p >Título Original:El Bozon de Higgs No te va a Hacer la Cama</p>
@@ -272,7 +272,7 @@
             </div>
         </section>
         <section>
-            <img src="Imagenes/Programacion_para_libros.jpg" alt="Aprende a Programar con Scratch: Manual para Niños">
+            <img src="../static/images/Programacion_para_libros.jpg" alt="Aprende a Programar con Scratch: Manual para Niños">
             <div class="seccion"> 
                 <h2>Aprende a Programar con Scratch: Manual para Niños</h2>
                 <p >Título Original:Aprende a Programar con Scratch: Manual para Niños</p>
