--- a/templates/index.html
+++ b/templates/index.html
@@ -38,19 +38,19 @@
                 <h3>Los mas vendidos</h3>
                 <div class="container_libros_vendidos">
                     <div class="item2">
-                        <img class="libro" src="Imagenes/libro1.jpg" alt="La Asistenta">
+                        <img class="libro" src="../static/images/libro1.jpg" alt="La Asistenta">
                         <p class="epigrafe">La Asistenta</p>
                     </div>
                     <div class="item2">
-                        <img class="libro" src="Imagenes/wigetta.jpg" alt="Universo Wigetta 1">
+                        <img class="libro" src="../static/images/wigetta.jpg" alt="Universo Wigetta 1">
                         <p class="epigrafe">Universo Wigetta</p>
                     </div>
                     <div class="item2">
-                        <img class="libro" src="Imagenes/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
+                        <img class="libro" src="../static/images/Cancion_de_aquiles.webp" alt="La Cancion de Aquiles">
                         <p class="epigrafe">Cancion de Aquiles</p>
                     </div>
                     
-                    <div class="item2"><img class="libro" src="Imagenes/SigMan.jpg" alt="Artificial">
+                    <div class="item2"><img class="libro" src="../static/images/SigMan.jpg" alt="Artificial">
                         <p class="epigrafe">Artificial</p>
                     </div>
                 
@@ -60,16 +60,16 @@
             <section class="atemporales">
                 <h3>Clasicos de todos los tiempos </h3>
                 <div class="container_libros_atemporales">
-                    <div class="item2"><img class="libro" src="Imagenes/Principito.jpg" alt="El Principito">
+                    <div class="item2"><img class="libro" src="../static/images/Principito.jpg" alt="El Principito">
                         <p class="epigrafe">La chica del tren</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/RomeoYJulieta.jpg" alt="Romeo y Julieta">
+                    <div class="item2"><img class="libro" src="../static/images/RomeoYJulieta.jpg" alt="Romeo y Julieta">
                         <p class="epigrafe">Romeo y Julieta</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/crepusculo.webp" alt="Crepusculo">
+                    <div class="item2"><img class="libro" src="../static/images/crepusculo.webp" alt="Crepusculo">
                         <p class="epigrafe">Crepusculo</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/martin_fierro.webp" alt="Martin Fierro">
+                    <div class="item2"><img class="libro" src="../static/images/martin_fierro.webp" alt="Martin Fierro">
                         <p class="epigrafe">Martin Fierro</p>
                     </div>
                 </div>
@@ -79,16 +79,16 @@
             <section class="recomendados">
                 <h3>Recomendados</h3>
                 <div class="container_libros_recomendados">
-                    <div class="item2"><img class="libro" src="Imagenes/la_chica_del_tren.webp" alt="La chica del tren">
+                    <div class="item2"><img class="libro" src="../static/images/la_chica_del_tren.webp" alt="La chica del tren">
                         <p class="epigrafe">La Chica del Tren</p>
                     </div>
-                    <div class="item2"> <img class="libro" src="Imagenes/la_tempestad.webp" alt="La tempestad">
+                    <div class="item2"> <img class="libro" src="../static/images/la_tempestad.webp" alt="La tempestad">
                         <p class="epigrafe">La tempestad</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/bozondehiggs.jpg" alt="El bozon de higgs no te va a hacer la cama">
+                    <div class="item2"><img class="libro" src="../static/images/bozondehiggs.jpg" alt="El bozon de higgs no te va a hacer la cama">
                         <p class="epigrafe">El Bozon de Higgs <br> no te va a hacer la cama</p>
                     </div>
-                    <div class="item2"><img class="libro" src="Imagenes/Programacion_para_libros.jpg" alt="Programacion para niños">
+                    <div class="item2"><img class="libro" src="../static/images/Programacion_para_libros.jpg" alt="Programacion para niños">
                         <p class="epigrafe">Programacion para Niños</p>
                     </div>
                 </div>
