Guardado Correcto de archivos js y correcion de rutas

--- a/templates/Catalogo.html
+++ b/templates/Catalogo.html
@@ -25,7 +25,7 @@
                 <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</a></h2></div>
             </nav>
 
-            <script src="menu.js"></script> 
+            <script src="static\js\menu.js"></script> 
 
         </div>
         
