--- a/templates/FQ.html
+++ b/templates/FQ.html
@@ -25,7 +25,7 @@
                 <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</a></h2></div>
             </nav>
 
-            <script src="menu.js"></script> 
+            <script src="static\js\menu.js"></script> 
 
         </div>
         
@@ -237,7 +237,7 @@
                 
             </form>
             
-            <script src="validacion_formulario.js"></script>
+            <script src="static\js\validacion_formulario.js"></script>
 
         </section>
 
