--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                 <div class="item"><h2><a id="catalogoLink" class="menu" href="Catalogo.html" >Catalogo</a></h2></div>
                 <div class="item"><h2><a id="nosotrosLink" class="menu" href="nosotros.html" >Nosotros</a></h2></div>
                 <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</a></h2></div>
+                <div class="item"><h2><a id="datosLink" class="menu" href="datos.html">Datos</a></h2></div>
             </nav>
 
             <script src="static\js\menu.js"></script> 
