--- a/templates/create.html
+++ b/templates/create.html
@@ -23,6 +23,7 @@
                 <div class="item"><h2><a id="catalogoLink" class="menu" href="Catalogo.html" >Catalogo</a></h2></div>
                 <div class="item"><h2><a id="nosotrosLink" class="menu" href="nosotros.html" >Nosotros</a></h2></div>
                 <div class="item"><h2><a id="FQLink" class="menu" href="FQ.html" >FAQ</a></h2></div>
+                <div class="item"><h2><a id="datosLink" class="menu" href="datos.html">Datos</a></h2></div>
             </nav>
 
             <script src="static\js\menu.js"></script> 
@@ -39,27 +40,27 @@
 
             <p> Ingrese los datos que se desean agregar </p>
 
-            <form name="formulario" id="formulario" method="post" action="" enctype="multipart/form-data">
+            <form name="formulario" id="formulario" method="post" action="/store" enctype="multipart/form-data">
 
                 <fieldset class="campo_formulario">
             
-                    <span class="linea"> <label>Titulo del libro: </label> </span>
-                    <span class="linea"> <input class="casilla" type="text" name="titulo_del_libro" id="titulo_del_libro" maxlength="30" placeholder="titulo del libro:"> </span>
+                    <span class="linea"> <label>Título del libro: </label> </span>
+                    <span class="linea"> <input class="casilla" type="text" name="titulo_del_libro" id="titulo_del_libro" maxlength="128" placeholder="titulo del libro:"> </span>
             
-                    <span class="linea"> <label>Titulo Original del libro: </label> </span>
-                    <span class="linea"> <input class="casilla" type="text" name="titulo_original" id="titulo_original" maxlength="30" placeholder="titulo original:"> </span>
+                    <span class="linea"> <label>Título Original del libro: </label> </span>
+                    <span class="linea"> <input class="casilla" type="text" name="titulo_original" id="titulo_original" maxlength="128" placeholder="titulo original:"> </span>
             
                     <span class="linea"> <label>Autor/es: </label> </span>
-                    <span class="linea"> <input class="casilla" type="text" name="autor" id="autor" maxlength="50" placeholder="autor/es:"> </span>
+                    <span class="linea"> <input class="casilla" type="text" name="autor" id="autor" maxlength="128" placeholder="autor/es:"> </span>
             
                     <span class="linea"> <label>Género/s: </label> </span>
-                    <span class="linea"> <input class="casilla" type="text" name="mail" id="genero" maxlength="50" placeholder="genero:"> </span>
+                    <span class="linea"> <input class="casilla" type="text" name="genero" id="genero" maxlength="128" placeholder="genero:"> </span>
                     
                     <span class="linea"> <label>Año de publicación: </label> </span>
-                    <span class="linea"> <input class="casilla" type="number" name="publicacion" id="publicacion" maxlength="50" placeholder="publicacion:"> </span>
+                    <span class="linea"> <input class="casilla" type="number" name="publicacion" id="publicacion" maxlength="11" placeholder="publicacion:"> </span>
             
             
-                    <span class="linea"> <input type="submit" id="btn" name="btn" value="Enviar"> </span>
+                    <span class="linea"> <input type="submit" id="btn" name="btn" value="Subir"> </span>
             
                 </fieldset>
                 
@@ -73,11 +74,11 @@
 
     </main>
     <section class="row">
-                <footer>
-                    <p class="texto_pie"> La Gata y la Luna | © 2013-2024 | Buenos Aires, Argentina</p>
-                    <p class="texto_pie"> Todos los derechos reservados. </p>
-                </footer>
-            </section>
+        <footer>
+            <p class="texto_pie"> La Gata y la Luna | © 2013-2024 | Buenos Aires, Argentina</p>
+            <p class="texto_pie"> Todos los derechos reservados. </p>
+        </footer>
+    </section>
 
 </body>
 </html>
